--- a/main.html
+++ b/main.html
@@ -8,24 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js"></script>
+
 		<marquee><h1>Welcome to Accio Jobs!</h1></marquee><br>
 		<a href="https://acciojob.com/blog/">Blog</a>
 
-		<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="No image" height="200px">
-		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs Optimization</a>
+		<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" alt="No image" height="200px"><br>
+		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs Optimization</a><br>
 		<p>We can say that optimization is more efficient to create the guest</p><br>
 
-		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="No image" height="200px">
+		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="No image" height="200px"><br>
 		<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs Competitive Programming</a>
 		<p>DSA or Competitive programming?...</p><br>
 
-		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="No image" height="200px">
-		<a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a>
+		<img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" alt="No image" height="200px"><br>
+		<a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a><br>
 		<p>As a job seeker,you may wonder how to make your LinkedIn profile stand out to recruiters Your LinkedIn</p>
 
 			
-</script>
 
 </body>
 
